2012-08-31  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-codegen.cc(IRState::buildFrameForFunction): New function.
	(IRState::buildChain): Use IRState::buildFrameForFunction to get the
	frame record type.
	(IRState::getFrameInfo): Likewise.
	* d-glue.cc(FuncDeclaration::buildClosure): Likewise.

2012-08-30  Iain Buclaw  <ibuclaw@ubuntu.com>

	* asmstmt.cc(ExtAsmStatement::toCBuffer): Mark unused parameter as
	ATTRIBUTE_UNUSED.
	* d-codegen.cc(WrappedExp::toCBuffer): Likewise.
	* d-objfile.cc(ObjectFile::setupSymbolStorage): Revert to previous
	behaviour of setting symbol storage.

	* d-codegen.cc(IRState::expandDecl): Use IRState::vinit.
	(IRState::binding): Likewise.
	(IRState::var): Handle all declarations, not just vars.
	* d-glue.cc(PtrExp::toElem): Simplify use of IRState::var.
	(SymbolExp::toElem ): Likewise.
	(ThisExp::toElem): Likewise.

	* d-lang.cc(d_init): Remove 'Thumb' identifier for ARM as 16bit
	platforms aren't supported.
	(GNU_LongDouble128): Remove identifier as long double size is
	determined from type information.

	* d-decls.cc(TypeInfoDeclaration::toSymbol): Mark all typeinfo decls
	as 'used'.
	* d-glue.cc(one_elem_array): Remove.
	(CatExp::toElem): Inline use of one_elem_array, clean-up.
	* d-objfile.cc(ObjectFile::setupSymbolStorage): Update to better
	handle use of declarations marked with comdat, extern or static.
	(ObjectFile::doSimpleFunction): Mark function as 'used'.
	* dt.cc(dt2node): Clean-up indentation.

	* Make-lang.in: Fix issue with cross-compiler configuration.

2012-08-29  Iain Buclaw  <ibuclaw@ubuntu.com>

	* lang-specs.h: Remove special case for handled D source files.
	* Make-lang.in: Remove special case for building gcc.o, use
	GCC_EXTRA_LIBS to link against, rather than specific gcc object files.
	(D_DRIVER_NAME): Remove use of variable.
	(D_DRIVER_OBJS): Likewise.
	(D_COMPILER_NAME): Likewise.

2012-08-23  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-builtins2.cc(eval_builtin): Use builtin_decl_explicit.